@@ -71,7 +71,10 @@ override_dh_install:
 	rm -f debian/tmp/usr/lib/ostree/ostree-prepare-root
 	rm -f debian/tmp/usr/lib/ostree/ostree-remount
 	:
-	dh_install --fail-missing
+	dh_install
+
+override_dh_missing:
+	dh_missing --fail-missing
 
 override_dh_makeshlibs:
 	# this is an LD_PRELOAD, not a real shared library
