@@ -3,6 +3,7 @@ ostree (2017.10-1) UNRELEASED; urgency=medium
   * New upstream release
     - Update symbols file
     - Install new bash completions
+  * Use dh_missing --fail-missing instead of dh_install --fail-missing
 
  -- Simon McVittie <smcv@debian.org>  Tue, 29 Aug 2017 16:08:09 +0100
 
